tests/error/return.moc
int main() {
    int x = 42;
    return "QBoule !";
}
